# pkood

./: .flake8  README.md  pkood  pkood.md  pkood_gemini.tape  pkood_watcher.py  pkoodv2.md  pyproject.toml
src/pkood/: agent_products.py  claude_code.py  cli.py  common.py  gemini_cli.py  generic_product.py  mcp_server.py  pkood_watcher.py  tester.py
