[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pkood"
version = "0.1.0"
description = "An Agentic Operations (AgOps) orchestrator for recursive, parallel development."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC0-1.0"}
authors = [
  {name = "Tal Franji", email = "[tal.franji@gmail.com]"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
pkood = "pkood.cli:main"

[project.urls]
"Homepage" = "https://github.com/tal-franji/pkood"
"Bug Tracker" = "https://github.com/tal-franji/pkood/issues"
